--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package_template",
+  "name": "age.js",
   "version": "1.0.0",
-  "description": "🚀 Package template",
+  "description": "🎂 Lightweight and documented age object for converting date of birth to age",
   "scripts": {
     "test": "jest",
     "build:dist": "rimraf dist && rollup -c",
@@ -17,6 +17,7 @@
   "private": false,
   "main": "./index.js",
   "module": "./index.mjs",
+  "browser": "./dist/browser/index.mjs",
   "type": "commonjs",
   "types": "./index.d.ts",
   "typings": "./index.d.ts",
@@ -26,7 +27,8 @@
     ".": {
       "require": "./index.js",
       "import": "./index.mjs",
-      "types": "./index.d.ts"
+      "types": "./index.d.ts",
+      "browser": "./dist/browser/index.mjs"
     }
   },
   "publishConfig": {
@@ -34,16 +36,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AlexXanderGrib/package-template.git"
+    "url": "git+https://github.com/AlexXanderGrib/age.git"
   },
   "keywords": [
-    "logger",
-    "log",
-    "logging",
-    "json",
-    "stream",
-    "http",
-    "pretty",
+    "age",
+    "birthday",
+    "date of birth",
+    "dob",
     "browser",
     "nodejs",
     "node",
@@ -70,9 +69,9 @@
   "author": "Alexander Gribochkin <me@alexxgrib.me> (https://alexxgrib.me/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AlexXanderGrib/package-template/issues"
+    "url": "https://github.com/AlexXanderGrib/age/issues"
   },
-  "homepage": "https://github.com/AlexXanderGrib/package-template#readme",
+  "homepage": "https://github.com/AlexXanderGrib/age#readme",
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "4",
@@ -93,6 +92,7 @@
     "rollup": "^2.75.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-prettier": "^2.2.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
@@ -109,5 +109,6 @@
   },
   "engines": {
     "node": ">=10"
-  }
+  },
+  "dependencies": {}
 }
